# javactl

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
include/javactl/cli/: command_executor.hpp  command_parser.hpp
include/javactl/cli/commands/: remote_list_command.hpp
include/javactl/config/: config_manager.hpp  javactl_config.hpp  mirror_config.hpp
include/javactl/download/: mirror_resolver.hpp
include/javactl/os/: os_detector.hpp
include/javactl/util/: file_utils.hpp
resources/: default-mirros.json
src/: main.cpp
src/javactl/cli/: command_executor.cpp  command_parser.cpp
src/javactl/cli/commands/: remote_list_command.cpp
src/javactl/config/: config_manager.cpp
src/javactl/download/: mirror_resolver.cpp
src/javactl/os/: os_detector.cpp
src/javactl/util/: file_utils.cpp
